Mid Terrm/zHomePractice/QuizPractice/Design/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    background-color: rgb(255, 255, 255);
    padding: 50px;
    line-height: 1.5;
}

.container1{
    max-width: fit-content;
    margin: 0 auto;
    background-color: azure;
    padding: 30px;
    border-radius: 8px;
    box-shadow: 0px 10px 10px;
}

form{
    display: flex;
}

fieldset{
    border-radius: 10px;
    border-color: black;
    padding: 10px;
}

legend{
    padding: 0 10px;
    background-color: rgb(196, 207, 229);
    border-radius: 5px;
    color: rgb(0, 0,0);
    font-weight: bold;
    font-size: 18px;
}

table{
    width: auto;
}

tr{
    margin: 10px;
}
td{
    padding: 5px;
}

label{
display: flex;
color: black;
font-size: 15px;
}

input[type="text"],
input[type="password"]{
    width: 100%;
    padding: 10px;
    margin: 0 5px;
    border-color: black;
    border-radius: 10px;
    font-size: 15px;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

input[type="submit"]{
    margin: auto;
    width: 50%;
    padding: 10px 20px;
    border-radius: 10px;
    color: springgreen;
    border-color: darkgreen;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-weight: bold;
    font-size: 18px;
    cursor: pointer;
}
input[type="reset"]{
    mar
    width: 100%;
    color: darkgray;
     
}

